Web Inspector: Shadow DOM scoped styles are missing https://bugs.webkit.org/show_bug.cgi?id=164247 <rdar://problem/29035061>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: inspector/css/shadow-scoped-style.html

* css/ElementRuleCollector.cpp:
(WebCore::ElementRuleCollector::matchAuthorRules):
Only match :host pseudo class for NOPSEUDO. It doesn't make sense
with a pseudo element request (:host::before does not make sense).

* css/InspectorCSSOMWrappers.h:
* css/InspectorCSSOMWrappers.cpp:
(WebCore::InspectorCSSOMWrappers::collectFromStyleSheetContents):
(WebCore::InspectorCSSOMWrappers::collectDocumentWrappers):
(WebCore::InspectorCSSOMWrappers::getWrapperForRuleInSheets):
Simplify existing "once per document" wrapper collection.

(WebCore::InspectorCSSOMWrappers::maybeCollectFromStyleSheets):
(WebCore::InspectorCSSOMWrappers::collectScopeWrappers):
Include a path to add style sheets that weren't already collected.
This will be useful when trying the StyleScope stylesheets which
are different for different nodes.

* inspector/InspectorCSSAgent.cpp:
(WebCore::containingStyleScopeForElement):
(WebCore::InspectorCSSAgent::buildObjectForRule):
Collect rules for document and StyleScope sheets separately.
For elements with a shadow root, add the root's sheets as
well in case there are :host rules that affect the element.

Source/WebInspectorUI:

* UserInterface/Models/DOMNodeStyles.js:
(WebInspector.DOMNodeStyles.prototype.refresh.fetchedInlineStyles):
Fix incorrect WrapperPromise usage.

LayoutTests:

* inspector/css/shadow-scoped-style-expected.txt: Added.
* inspector/css/shadow-scoped-style.html: Added.

Canonical link: https://commits.webkit.org/181975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208199 268f45cc-cd09-0410-ab3c-d52691b4dbfc